--- a/scripts/conda/adios2/minimal/CMakeLists.txt
+++ b/scripts/conda/adios2/minimal/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6)
-project(ADIOS2_SUPERBUILD C CXX)
+project(ADIOS2_MINIMAL C CXX)
 
 include(ExternalProject)
 
@@ -17,14 +17,12 @@ ExternalProject_Add(adios2
     -DADIOS2_USE_Python=ON
     -DPYTHON_EXECUTABLE=$ENV{PYTHON}
     -DADIOS2_USE_Fortran=ON
-    -DADIOS2_USE_MPI=OFF
-    -DADIOS2_USE_SST=ON
-    -DADIOS2_USE_DataMan=ON
-    -DADIOS2_USE_ZeroMQ=ON
+    -DADIOS2_USE_MPI=ON
+    -DADIOS2_USE_SST=OFF
+    -DADIOS2_USE_DataMan=OFF
+    -DADIOS2_USE_ZeroMQ=OFF
     -DADIOS2_USE_HDF5=OFF
-    -DADIOS2_USE_BZip2=ON
-    -DADIOS2_USE_PNG=ON
-    -DADIOS2_USE_Blosc=ON
+    -DADIOS2_USE_BZip2=OFF
     -DADIOS2_USE_ZFP=OFF
     -DADIOS2_USE_SZ=OFF
     -DADIOS2_USE_MGARD=OFF
